# ur_test-deprecated-

src/test/ur10_test/: CMakeLists.txt
src/test/ur10_test/launch/: test_delay.launch  test_logging.launch
src/test/ur10_test/src/: simple_control.cpp  test_delay.cpp
src/test/ur_test/: CMakeLists.txt  package.xml
src/test/ur_test/launch/: run_urscript.launch  simple_control.launch  test_delay.launch  test_logging.launch
src/test/ur_test/matlab/: plot_logged_data.m
src/test/ur_test/src/: simple_control.cpp  test_delay.cpp  test_logging.cpp
src/universal_robot/ur_modern_driver/: CMakeLists.txt
src/universal_robot/ur_modern_driver/include/ur_modern_driver/: robot_state_RT.h  ur_communication.h  ur_driver.h  utils.h
src/universal_robot/ur_modern_driver/src/: ur_driver.cpp  ur_hardware_interface.cpp  ur_realtime_communication.cpp  utils.cpp
src/universal_robot/ur_robot/: CMakeLists.txt  package.xml
src/universal_robot/ur_robot/include/ur_robot/: ur_robot.h
src/universal_robot/ur_robot/src/: ur_robot.cpp
src/ur_robot/universal_robot/ur_modern_driver/: CMakeLists.txt
src/ur_robot/universal_robot/ur_modern_driver/launch/: ur_common.launch  ur_common2.launch
src/ur_robot/universal_robot/ur_modern_driver/src/: robot_state.cpp  robot_state_RT.cpp  ur_communication.cpp  ur_driver.cpp  ur_hardware_interface.cpp  ur_realtime_communication.cpp  ur_ros_wrapper.cpp
src/ur_robot/ur10_robot/: CMakeLists.txt  package.xml
src/ur_robot/ur10_robot/launch/: ur10_urdf.launch
src/ur_robot/ur10_robot/src/: ur10_robot.cpp
(+6 files in other folders)
